--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=meat
+spring.data.mongodb.username=meatdb
+spring.data.mongodb.password=meat2019@
+spring.data.mongodb.database=meat
